--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -1,31 +1,34 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
+name: Java app CI/CD
 
-name: Java CI with Maven
+run-name: ${{ github.actor }} is building java applications
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+    - main
+  workflow_dispatch:
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java: [ '17' ]
+  build_package:
+    runs-on: ubuntu-22.04
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK ${{matrix.java}}
-        uses: actions/setup-java@v4
-        with:
-          java-version: ${{matrix.java}}
-          distribution: 'adopt'
-          cache: maven
-      - name: Build with Maven Wrapper
-        run: ./mvnw -B package
-      - name: artifact check
-        run: ls -la ${{ github.workspace }}/target
+    - name: checkout Git repository
+      uses: actions/checkout@v4
+
+    - name: select specific java package
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'adopt'
+        java-version: '17'
+
+    - name: check version java and maven
+      run: |
+        java -version 
+        mvn --version
+
+    - name: build java package
+      run: mvn clean package
+
+    - name: check artifact
+      run: ls -la  ${{ github.workspace }}/target
