--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -1,34 +1,34 @@
-name: Java app CI/CD
-
-run-name: ${{ github.actor }} is building java applications
-
+name: CI/CD workflow for Maven Build and Sonar Code scan
 on:
   push:
     branches:
-    - main
+      - main
   workflow_dispatch:
-
 jobs:
-  build_package:
-    runs-on: ubuntu-22.04
-
+  build:
+    runs-on: ubuntu-latest
     steps:
-    - name: checkout Git repository
-      uses: actions/checkout@v4
-
-    - name: select specific java package
-      uses: actions/setup-java@v4
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
       with:
         distribution: 'adopt'
         java-version: '17'
-
-    - name: check version java and maven
-      run: |
-        java -version 
-        mvn --version
-
-    - name: build java package
-      run: mvn clean package
-
+    - name: Build with Maven
+      run: mvn clean install -f pom.xml
+      
     - name: check artifact
       run: ls -la  ${{ github.workspace }}/target
+
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
+      with:
+        projectBaseDir: .
+        args: >
+          -Dsonar.organization=my-org
+          -Dsonar.projectKey=my-web-app-121
+
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
