--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -28,6 +28,7 @@ jobs:
         args: >
           -Dsonar.organization=my-org
           -Dsonar.projectKey=sprong-java-app
+          -Dsonar.java.binaries=src/main
 
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
